# ai-invention-e59d7b-perception-asymmetry-feedback-loop-how-d

./: README.md
asymmetric_bounded_confidence_model_for_opinion_dynamics_wit/src/: artifact_metadata.json  artifact_title.txt  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
asymmetric_bounded_confidence_model_for_opinion_dynamics_wit/src/dependencies/Empirical_Calibration_of_Perception_Asymmetry_Para/: artifact_title.txt
asymmetric_bounded_confidence_model_for_opinion_dynamics_wit/src/dependencies/Political_Bias_Opinion_Distribution_Dataset_for_Ag/: artifact_metadata.json  artifact_title.txt  data.py  full_data_out.json  preview_data_out.json
asymmetric_bounded_confidence_model_for_opinion_dynamics_wit/src/dependencies/Political_Bias_Opinion_Distribution_Dataset_for_Ag/temp/datasets/: full_NoraAlt_Mawqif_Stance-Detection_train.json  full_cajcodes_political-bias_train.json  full_cmpatino_news-bias-detection-dataset_all_train.json  mini_KarsenWahal_newswire-partisanship-1968_train.json  (+2 more)
asymmetric_bounded_confidence_model_for_opinion_dynamics_wit/src/dependencies/Standard_Validation_Protocol_for_Opinion_Dynamics/: artifact_metadata.json  artifact_title.txt  finding_out.json
asymmetric_bounded_confidence_model_for_opinion_dynamics_wit/src/output/: experiment_summary.json  merger_events.csv  phase_transition_analysis.csv  preview_method_out.json  raw_results.csv  stability_vs_asymmetry.csv
asymmetric_bounded_confidence_model_for_opinion_dynamics_wit/src/src/: asymmetric_bounded_confidence.py  test_abm.py
(+17 files in other folders)
